# ezapp

./: .env  .env.example  .gitignore  .pdm-python  gitsave.py  makeresume.py  package-lock.json  parsepdf.py  pyproject.toml  resume.xml  test-upload.html
backend/: api.py  gitsave.py  makeresume.py
backend/resumes/: temp_preview.xml
backend/resumes/xml/: Resume_1.xml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BuildResume.css  BuildResume.jsx  Dashboard.jsx  Login.jsx  Register.jsx  ResumeForm.jsx  ResumePreview.css  ResumePreview.jsx  build.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/utils/: api.js  supabaseClient.js
uploader-extension/: README.md  background.js  config.js  content_script.js  manifest.json  popup.html  popup.js
