[project]
name = "ezapp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sheasmith19", email = "sheamccabesmith@gmail.com"},
]
dependencies = ["fastapi>=0.128.3", "uvicorn>=0.40.0", "reportlab>=4.4.9", "gitpython>=3.1.46", "python-jose[cryptography]>=3.5.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
