[project]
name = "ezapp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sheasmith19", email = "sheamccabesmith@gmail.com"},
]
dependencies = ["fastapi>=0.128.3", "uvicorn>=0.40.0", "reportlab>=4.4.9", "gitpython>=3.1.46", "python-jose[cryptography]>=3.5.0", "python-dotenv>=1.2.1", "PyJWT[crypto]>=2.11.0", "certifi>=2026.1.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
